--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,3 +27,8 @@
     background-color: #282c34;
     color: #ffffff;
   }
+  .sticky-top {
+    padding: 5%;
+    background: white;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+  }
