--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,3 +32,6 @@
     background: white;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
   }
+  .past-todo {
+    background-color: #fcbac0
+  }
